# RustySocket

actix_test/: Cargo.toml
actix_test/src/: main.rs
rusty_client/: Cargo.toml
rusty_client/src/: api_types.rs  main.rs
rusty_server/: Cargo.toml
rusty_server/src/: api_types.rs  chat_endpoints.rs  main.rs
