[package]
name = "web_server_fronend"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["blocking","json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"
