[package]
name = "rusty_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-ws = "0.4.0"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
